# Client

./: .gitignore  CMakeLists.txt  README.md  cameralistdialog.cpp  cameralistdialog.h  cameraregistrationdialog.cpp  cameraregistrationdialog.h  loghistorydialog.cpp  loghistorydialog.h  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  videoplayermanager.cpp  videoplayermanager.h
